update delete calls to more consistently uses query params for selection
